Add scaleType at activity_read_comic_activity.xml

--- a/app/src/main/res/layout/activity_read_comic_activityy.xml
+++ b/app/src/main/res/layout/activity_read_comic_activityy.xml
@@ -4,46 +4,48 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     tools:context=".ReadComicActivityy">
 
-    <ImageView
-        android:scaleType="centerCrop"
-        android:id="@+id/imgImage"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        <ImageView
+            android:scaleType="fitXY"
+            android:id="@+id/imgImage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-    <ImageView
-        android:id="@+id/imgLeft"
-        android:layout_width="46dp"
-        android:layout_height="46dp"
-        android:background="@drawable/bg_left"
-        android:padding="8dp"
-        android:src="@drawable/left"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/imgLeft"
+            android:layout_width="46dp"
+            android:layout_height="46dp"
+            android:background="@drawable/bg_left"
+            android:padding="8dp"
+            android:src="@drawable/left"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imgRight"
-        android:padding="8dp"
-        android:background="@drawable/bg_right"
-        android:layout_width="46dp"
-        android:layout_height="46dp"
-        android:src="@drawable/right"
-        app:layout_constraintBottom_toBottomOf="@+id/imgLeft"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imgLeft" />
+        <ImageView
+            android:id="@+id/imgRight"
+            android:padding="8dp"
+            android:background="@drawable/bg_right"
+            android:layout_width="46dp"
+            android:layout_height="46dp"
+            android:src="@drawable/right"
+            app:layout_constraintBottom_toBottomOf="@+id/imgLeft"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imgLeft" />
 
-    <TextView
-        android:id="@+id/txtNumPage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="36dp"
-        android:background="@drawable/bg_num_page"
-        android:text="Number Page"
-        android:textColor="#fff"
-        android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:id="@+id/txtNumPage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="36dp"
+            android:background="@drawable/bg_num_page"
+            android:text="Number Page"
+            android:textColor="#fff"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
