--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:background="@drawable/bg_gradient_1"
         android:gravity="center">
 
+
         <ImageView
             android:layout_marginLeft="6dp"
             android:id="@+id/imgMenu"
@@ -58,5 +59,7 @@
         android:id="@+id/gvComic"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:numColumns="3" />
+        android:numColumns="3" >
+
+    </GridView>
 </LinearLayout>
