--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -24,11 +24,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:fontFamily="@font/font_quad"
+        android:fontFamily="@font/svn_gretoon"
         android:gravity="center"
         android:padding="5dp"
         android:text="@string/tittle_start"
-        android:textSize="50sp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="@+id/imgLogo"
         app:layout_constraintStart_toStartOf="@+id/imgLogo"
         app:layout_constraintTop_toBottomOf="@+id/imgLogo" />
@@ -39,10 +39,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
         android:background="@drawable/selector_button_start"
-        android:fontFamily="@font/font_giant"
+        android:fontFamily="@font/utm_gille_classic"
         android:onClick="onStartButton"
-        android:text="Start"
-        android:textSize="35sp"
+        android:text="Bắt đầu"
+        android:textSize="25sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="@+id/txtTitleStart"
         app:layout_constraintHorizontal_bias="0.496"
