--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="text_color_edit">#fff</color>
     <color name="text_color_chap_name">#FFFFFF</color>
-    <color name="text_color_comic_name">#FFFFFF</color>
+    <color name="text_color_comic_name">#000000</color>
+    <color name="text_color_comic_name_1">#FFEB3B</color>
 </resources>
