--- a/app/src/main/res/layout/activity_chap.xml
+++ b/app/src/main/res/layout/activity_chap.xml
@@ -74,9 +74,9 @@
             app:layout_constraintTop_toBottomOf="@+id/profile_comic_image" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:background="@drawable/bg_gradient"
-        android:id="@+id/lvChaps"
+        android:id="@+id/rclChaps"
         android:padding="12dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
