--- a/app/src/main/res/layout/activity_chap.xml
+++ b/app/src/main/res/layout/activity_chap.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ChapActivity">
+    tools:context=".activities.ChapActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:orientation="vertical"
