--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_start_activity"
-    tools:context=".StartActivity">
+    tools:context=".activities.StartActivity">
 
     <ImageView
         android:id="@+id/imgLogo"
