--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -61,17 +61,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <GridView
-            android:id="@+id/gvComic"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:numColumns="3" />
-
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_nav"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
+            android:overScrollMode="always"
             android:background="@drawable/bg_gradient_1"
             app:itemIconTint="#FFFFFF"
             app:itemTextColor="#FFFFFF"
