--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -4,10 +4,15 @@
     <item
         android:id="@+id/nav_home"
         android:icon="@drawable/state_bottom_nav_home"
-        android:title="Home"/>
+        android:title="Home" />
+
+    <item
+        android:id="@+id/nav_search"
+        android:icon="@drawable/state_bottom_nav_search"
+        android:title="Search" />
 
     <item
         android:id="@+id/nav_saved"
         android:icon="@drawable/state_bottom_nav_saved"
-        android:title="Saved"/>
+        android:title="Saved" />
 </menu>
