swap gridView by RecyclerView GridView

--- a/app/src/main/res/layout/fragment_home_comic.xml
+++ b/app/src/main/res/layout/fragment_home_comic.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
-
-    <GridView
-        android:id="@+id/gvComic"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rclComic"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:numColumns="3" />
-</LinearLayout>
+        android:layout_height="match_parent"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatActionUpdate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="120dp"
+        style="@style/Widget.MaterialComponents.FloatingActionButton"
+        app:srcCompat="@drawable/ic_update_black_24dp"/>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
